--- a/doc.html
+++ b/doc.html
@@ -25,9 +25,11 @@
 <head>
     <meta charset="UTF-8">
     <title>NOD - EMU Autogen</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+          integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+          referrerpolicy="no-referrer" rel="stylesheet"/>
     <style type="text/css">
         @page {
             $CSS_CUSTOMIZATIONS
@@ -37,12 +39,12 @@
 
     <script>
         window.MathJax = {
-          tex: {
-            inlineMath: [['#', '#'], ['##', '##']]
-          },
-          svg: {
-            fontCache: 'global'
-          }
+            tex: {
+                inlineMath: [["#", "#"], ["##", "##"]]
+            },
+            svg: {
+                fontCache: "global"
+            }
         };
     </script>
     <script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@4.0.0-beta.7/tex-svg.js"></script>
@@ -50,14 +52,14 @@
     <script>
         window.PagedConfig = {
             auto: false,
-            before: function() {
+            before: function () {
                 return Promise.allSettled([MathJax.typesetPromise()])
                     .then(function () {
                             window.PagedPolyfill.preview();
                         }
                     );
             },
-            after: function() {
+            after: function () {
                 $$(document.body).prepend("<div id='emu-loaded'>&nbsp</div>");
             }
         };
@@ -65,6 +67,6 @@
     <script src="js/paged.polyfill.min.js"></script>
 </head>
 <body>
-    $CONTENTS
+$CONTENTS
 </body>
 </html>
