--- a/img_grid.html
+++ b/img_grid.html
@@ -21,8 +21,10 @@
 -->
 
 <table>
-  <tr>
-    <td><img src="https://picsum.photos/200/300"/><p>Hello</p></td>
-    <td><img src="https://picsum.photos/200/300"/><p>Hello</p></td>
-  </tr>
+    <tr>
+        <td><img src="https://picsum.photos/200/300"/>
+            <p>Hello</p></td>
+        <td><img src="https://picsum.photos/200/300"/>
+            <p>Hello</p></td>
+    </tr>
 </table>
