--- a/doc_page.html
+++ b/doc_page.html
@@ -25,7 +25,7 @@
     <span class="emu-heading-doc-id">$DID &dash;</span>
     <span class="emu-heading-doc-name">$NAME</span>
     <br>
-    <span>$TITLE</span>
+    <span class="emu-chapter-name">$TITLE</span>
 </h1>
 
 <div class="emu-body-container">
