--- a/doc.html
+++ b/doc.html
@@ -3,16 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>NOD - EMU Autogen</title>
+    <title></title>
     <link href="css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         referrerpolicy="no-referrer" rel="stylesheet">
     <style>
-        @page {
-            $CSS_CUSTOMIZATIONS
-        }
+        $CSS_CUSTOMIZATIONS
     </style>
     <script src="js/jquery.min.js"></script>
 
