--- a/doc.html
+++ b/doc.html
@@ -4,38 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link href="css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         referrerpolicy="no-referrer" rel="stylesheet">
-    <style>
-        $CSS_CUSTOMIZATIONS
-    </style>
+
+    $CSS_CUSTOMIZATIONS
+
     <script src="js/jquery.min.js"></script>
 
-    <script>
-        window.MathJax = {
-            tex: {
-                inlineMath: [["#", "#"], ["##", "##"]]
-            },
-            svg: {
-                fontCache: "global"
-            }
-        };
-    </script>
-    <script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@4.0.0-beta.7/tex-svg.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.22/dist/katex.min.css"
+        integrity="sha384-5TcZemv2l/9On385z///+d7MSYlvIEw9FuZTIdZ14vJLqWphw7e7ZPuOiCHJcFCP" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.22/dist/katex.min.js"
+        integrity="sha384-cMkvdD8LoxVzGF/RPUKAcvmm49FQ0oxwDF3BGKtDXcEc+T1b2N+teh/OJfpU0jr6"
+        crossorigin="anonymous"></script>
 
     <script>
         window.PagedConfig = {
-            auto: false,
-            before: function () {
-                return Promise.allSettled([MathJax.typesetPromise()])
-                    .then(async function () {
-                        await window.PagedPolyfill.preview();
-                    }
-                    );
-            },
+            auto: true,
             after: function () {
                 $$(document.body).prepend("<div id=\"emu-loaded\">&nbsp;</div>");
             }
@@ -43,6 +29,8 @@
     </script>
     <script src="js/paged.polyfill.min.js"></script>
     <script src="js/toc.js"></script>
+
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
