Fix the blank page at the beginning

--- a/doc.html
+++ b/doc.html
@@ -23,7 +23,7 @@
         window.PagedConfig = {
             auto: true,
             after: function () {
-                $$(document.body).prepend("<div id=\"emu-loaded\">&nbsp;</div>");
+                $$(document.body).prepend("<span style=\"display: none\" id=\"emu-loaded\">&nbsp;</span>");
             }
         };
     </script>
