--- a/title.html
+++ b/title.html
@@ -1,28 +1,8 @@
-<div class="emu-title">
-    <h1 class="emu-doc-title">$DOC_NAME</h1>
+<style>
+    div.emu-title {
+        background-image: url($BG_IMG);
+        background-size: contain;
+    }
+</style>
 
-    <table class="emu-title-table">
-        <thead>
-            <tr>
-                <th>DID</th>
-                <td>$DOC</td>
-            </tr>
-            <tr>
-                <th>NAME</th>
-                <td>$DOC_NAME</td>
-            </tr>
-            <tr>
-                <th>AUTHOR</th>
-                <td>$DOC_AUTHOR</td>
-            </tr>
-            <tr>
-                <th>DESCRIPTION</th>
-                <td>$DOC_DESC</td>
-            </tr>
-            <tr>
-                <th>DATE</th>
-                <td>$DOC_DATE</td>
-            </tr>
-        </thead>
-    </table>
-</div>
+<div class="emu-title"></div>
