--- a/doc.html
+++ b/doc.html
@@ -25,7 +25,7 @@
             }
         };
     </script>
-    <script src="https://unpkg.com/pagedjs/dist/paged.polyfill.min.js"></script>
+    <script src="js/paged.polyfill.min.js"></script>
     <script src="js/toc.js"></script>
 
     <link href="css/style.css" rel="stylesheet">
